<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.exit_vehicle.ExitFragment">

    <TextView
        android:id="@+id/textViewExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_exit"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="@dimen/text_dimen_22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutExit"
        android:background="@drawable/border_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExit">

        <EditText
            android:id="@+id/editTextExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary"
            android:hint="@string/edit_text_insert_check"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonExitVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_insert_check"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutExit"/>

    <LinearLayout
        android:id="@+id/llContainerCoste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExitVehicle" >

        <TextView
            android:id="@+id/textViewTitleCosteExit"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/title_coste"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:textSize="@dimen/text_dimen_18sp"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginEnd="@dimen/dimen_8dp" />

        <TextView
            android:id="@+id/textViewCosteExit"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:textSize="@dimen/text_dimen_18sp"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginEnd="@dimen/dimen_8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>